# elopy

./: README.md  pyproject.toml
elopy/: elo.py
tests/: test_elopy.py
