[tool.poetry]
name = "elopy"
version = "0.1.1"
description = "A package to simplify Elo calculations"
authors = ["mcbarlowe <mcbarlowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
