[tool.poetry]
name = "elopy"
version = "0.1.2"
description = "A package to simplify Elo calculations"
authors = ["Matt Barlowe <mcbarlowe@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcbarlowe/elopy"
repository = "https://github.com/mcbarlowe/elopy"
keywords = ["elo", "sports", "basketball", "nba"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
